--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
               <p>Drop a message and we will be intouch with you soon.</p>
             </div>
             <div class="contact_form">
-              <form id="contact-form" action="">
+              <form id="contact-form" action="" netlify>
                 <div class="row">
                   <div class="col-md-6">
                     <div class="single_form">
