--- a/index.html
+++ b/index.html
@@ -836,17 +836,17 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="single_form">
-                      <input name="name" type="text" placeholder="Name">
+                      <input name="name" type="text" placeholder="Name" required>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="single_form">
-                      <input name="email" type="email" placeholder="Email">
+                      <input name="email" type="email" placeholder="Email" required>
                     </div>
                   </div>
                   <div class="col-md-12">
                     <div class="single_form">
-                      <textarea name="message" placeholder="Message"></textarea>
+                      <textarea name="message" placeholder="Message" required></textarea>
                     </div>
                   </div>
                   <p class="form-message"></p>
