--- a/index.html
+++ b/index.html
@@ -907,8 +907,8 @@
             <div class="footer_subscribe mt-50">
               <h2 class="footer_title">Newsletter</h2>
               <div class="subscribe_form text-right">
-                <form action="#">
-                  <input type="text" placeholder="Enter email">
+                <form action="#" netlify>
+                  <input type="text" placeholder="Enter email" required>
                   <button class="main-btn">Subscribe</button>
                 </form>
               </div>
