added name to newletter email

--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
               <h2 class="footer_title">Newsletter</h2>
               <div class="subscribe_form text-right">
                 <form action="#" netlify>
-                  <input type="text" placeholder="Enter email" required>
+                  <input type="text" name="newsletter-email" placeholder="Enter email" required>
                   <button class="main-btn">Subscribe</button>
                 </form>
               </div>
