added google anylatics code in index page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
 
   <link rel="stylesheet" href="css/custom.css">
   <script src="js/custom.js"></script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R2CTV7FV0M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  
+  gtag('config', 'G-R2CTV7FV0M');
+</script>
+  <!-- Google tag (gtag.js) -->
 </head>
 
 <body>
