added og image size & added full url in og image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Primary Meta Tags -->
   <meta name="title" content="Indian Developers">
   <meta name="keywords"
-    content="Indian Developers,Rankers Bseb, Gandharv Vats, Bihar, Digital Marketing, Seo in bihar, make a website,make a app, educational app, Bihar software company, Purnea, Blogging in Bihar,Mohnish Vats">
+    content="Indian Developers,Rankers Bseb, Gandharv Vats,coderharsh Bihar, Digital Marketing, Seo in bihar, make a website,make a app, educational app, Bihar software company, Purnea, Blogging in Bihar,Mohnish Vats">
   <meta name="author" content="Indian Developers">
   <meta name="robots" content="INDEX,FOLLOW">
   <!-- Open Graph / Facebook -->
@@ -22,8 +22,9 @@
   <meta property="og:title" content="Indian Developers - One-stop solution for your brand">
   <meta property="og:description" content="Indian Developers provides you one-stop solution for creating websites, mobile apps, seo, digital marketing etc. for your bussiness
   & brands.">
-  <meta property="og:image" itemprop="image" content="images/indian-developers-social.jpg">
-
+  <meta property="og:image" itemprop="image" content="https://indiandevelopers.org/images/indian-developers-social.jpg">
+<meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="420" />
   <!-- seo -->
 
   <link rel="shortcut icon" href="favicons/indian-developers-favicon.png" type="image/png">
