added mobile no option in chat and add the scroll contact id in nav

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                     <a class="page-scroll" href="#blog">Blog</a>
                   </li>
                   <li class="nav-item">
-                    <a class="page-scroll" href="https://indiandevelopers.org/about" target="_blank">About</a>
+                    <a class="page-scroll" href="/about" target="_blank">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="page-scroll" href="https://indiandevelopers.org/contact" target="_blank">Contact</a>
+                    <a class="page-scroll" href="#contact">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -854,6 +854,10 @@
                       <input name="email" type="email" placeholder="Email" required>
                     </div>
                   </div>
+                  <div class="col-md-6">
+                    <div class="single_form">
+                      <input name="mob-no" type="tel" placeholder="Mobile no" required>
+                    </div>
                   <div class="col-md-12">
                     <div class="single_form">
                       <textarea name="message" placeholder="Message" required></textarea>
