--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
   gtag('config', 'G-R2CTV7FV0M');
 </script>
   <!-- Google tag (gtag.js) -->
+  
+<!--   one signal push -->
+  
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "96314614-e169-4299-bba8-ad1047ee3791",
+    });
+  });
+</script>
+<!--   one signal push -->
 </head>
 
 <body>
