--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="https://indiandevelopers.org/">
-                <img src="images/Indian-Developers-logo.svg" alt="Logo">
+                <img src="images/Indian-Developers-logo.png" alt="Logo">
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
