update favicon and delete old favicon

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="og:image:height" content="420" />
   <!-- seo -->
 
-  <link rel="shortcut icon" href="favicons/indian-developers-favicon.png" type="image/png">
+  <link rel="shortcut icon" href="favicons/favicon.png" type="image/png">
 
   <link rel="stylesheet" href="css/css-animate.css">
 
