--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="footer_about mt-50">
               <div class="footer_logo">
-                <a href="#"><img src="images/Indian-Developers-footer.svg" alt=""></a>
+                <a href="#"><img src="images/footer-logo.png" alt=""></a>
               </div>
               <div class="footer_content">
                 <p>One-stop solution for creating websites, mobile apps, seo, digital marketing etc. for your bussiness
