--- a/internship-project-submit.html
+++ b/internship-project-submit.html
@@ -137,7 +137,7 @@
 <section id="internship-sec">
   <div>
     <h2>Internship | Indian Developers</h2>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScjnGTlPlwlD8N4UE9r8K__7syXTSXbEn0MBsM4zRb0-w_rQg/viewform?embedded=true" width="840" height="3000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScjnGTlPlwlD8N4UE9r8K__7syXTSXbEn0MBsM4zRb0-w_rQg/viewform?embedded=true" width="90%" height="3000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </div>
 </section>
   <section id="why" class="about_area pt-115 ">
