--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@
 					</ul>
 				</div>
 				<div class="footer_copyright_content  text-center">
-					<p>Designed and Developed by <a href="https://coderharsh.in/">Indian
+					<p>Designed and Developed by <a href="https://indiandevelopers.org/">Indian
 							Developers</a></p>
 				</div>
 			</div>
